--- a/frontend/src/pages/Submit.scss
+++ b/frontend/src/pages/Submit.scss
@@ -19,4 +19,23 @@
   .input {
     margin-top: 20px;
   }
+
+  .submit_button {
+    margin: 20px auto;
+    background-color: #0e0b37;
+    color: #f0f0f0;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.3s;
+
+    &:hover {
+      background-color: #1a155b;
+      transform: scale(1.05);
+    }
+  }
 }
