--- a/frontend/src/components/layout/Navbar.scss
+++ b/frontend/src/components/layout/Navbar.scss
@@ -29,6 +29,7 @@
         text-decoration: none;
         color: #3d314a;
         font-size: 1rem;
+        cursor: pointer;
 
         &:hover {
           color: #a55057;
