changed all bolds to 600

--- a/frontend/src/pages/Leaderboard.scss
+++ b/frontend/src/pages/Leaderboard.scss
@@ -11,7 +11,7 @@
     color: #fff;
     padding: 20px 30px;
     border-radius: 20px;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 1em;
   }
 
@@ -40,7 +40,7 @@
     align-items: flex-start;
 
     .leaderboard-name {
-      font-weight: bold;
+      font-weight: 600;
       color: #333;
     }
 
