--- a/frontend/src/components/apply/Box.scss
+++ b/frontend/src/components/apply/Box.scss
@@ -41,7 +41,7 @@
 
   &__company {
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 600;
     margin: 20px 0px;
   }
 
@@ -66,7 +66,7 @@
 
   &__reward {
     font-size: 1.5em;
-    font-weight: bold;
+    font-weight: 600;
   }
 
   &__apply-button {
