--- a/frontend/src/components/home/Post.scss
+++ b/frontend/src/components/home/Post.scss
@@ -44,7 +44,7 @@
     }
 
     &-name {
-      font-weight: bold;
+      font-weight: 600;
       font-size: 1.2rem;
     }
 
@@ -88,7 +88,7 @@
     &__likes {
       margin-right: 10px;
       font-size: 1.1rem;
-      font-weight: bold;
+      font-weight: 600;
     }
 
     .likes {
