--- a/frontend/src/components/portfolio/UserProfile.scss
+++ b/frontend/src/components/portfolio/UserProfile.scss
@@ -63,7 +63,7 @@
 
       &-number {
         font-size: 1.2rem;
-        font-weight: bold;
+        font-weight: 600;
         color: #3d314a;
       }
 
